# pov_system

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  commandparser.cpp  commandparser.h  filesys.cpp  filesys.h  imageselection.cpp  imageselection.h  main.cpp  stringop.cpp  stringop.h
Abgabe-povPart/povStripe/: povStripe.ino
Gyro/: Gyro.ino
bluetooth/: bluetooth.ino
ledStrip/: ledStrip.ino
lib/lodepng/: CMakeLists.txt
lib/pixel_reader/: CMakeLists.txt
lib/pixel_reader/src/: hello.cpp  hello.h  pixel_reader.cpp  pixel_reader.h
motor/: motor.ino
portCheck/: portCheck.ino
pov/pov/: pov.ino
povStripe/: povStripe.ino
povStripeRestore/: povStripeRestore.ino
resources/: Source.cpp  bluetoothtests.cpp
src/: main.cpp
textParser/: textParser.ino
